# competitive-analysis-agent-platform

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile.backend  LICENSE  PRODUCT.md  PROGRESS.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: __init__.py
backend/agents/: __init__.py  _authority.py  _base.py  _progress.py  _qa_feedback.py
backend/agents/analyst/: README.md  __init__.py  agent.py  dimensions.py  fixtures.py
backend/agents/collector/: README.md  __init__.py  agent.py  fixtures.py  llm_providers.py  tools.py
backend/agents/extractor/: README.md  __init__.py  agent.py  fixtures.py  tools.py
backend/agents/qa/: README.md  __init__.py  agent.py  fixtures.py  routing.py
backend/agents/reporter/: README.md  __init__.py  agent.py  fixtures.py  templates.py  tools.py
backend/api/: README.md  __init__.py  app.py  deps.py  run_lifecycle.py  schemas.py  security.py  version.py
backend/api/routes/: __init__.py  auth.py  discovery.py  events.py  evidence.py  interventions.py  meta.py  projects.py  reports.py  runs.py
backend/api/tests/: test_auth_isolation.py  test_discovery.py  test_jwt_secret_gate.py  test_paragraph_patch.py  test_real_full_chain.py  test_run_lifecycle.py  test_run_state_view.py  test_version.py
backend/llm/: __init__.py  pricing.py
backend/llm/tests/: test_pricing.py
backend/observability/: README.md  __init__.py  io_snapshot.py  llm_call_log.py  tracer.py
backend/observability/tests/: test_io_snapshot.py  test_tracer.py
backend/orchestrator/: README.md  __init__.py  adaptive_planner.py  agent_registry.py  executor.py  feedback_router.py  graph.py  inputs.py  metrics.py  nodes.py  orchestrator.py  plan_directives.py  planner.py  projection.py  routing.py  run_agent.py  run_state.py  run_view.py  state.py
backend/orchestrator/templates/: collab_saas_standard.yaml  crm_saas_standard.yaml  cross_border_standard.yaml  edu_saas_standard.yaml
backend/orchestrator/tests/: test_adaptive_planner.py  test_agent_registry.py  test_collect_progress.py  test_executor.py  test_feedback_router.py  test_identity_rework.py  test_metrics.py  test_native_engine_e2e.py  test_native_gaps.py  test_native_graph.py  test_native_projection.py  test_native_replay.py  test_native_routing.py  test_native_run_agent.py  test_native_run_state.py  test_plan_directives.py  test_planner.py  test_real_smoke.py  test_run_view.py
backend/schemas/: __init__.py  agent_io.py  analyst.py  collector.py  competitor.py  dag.py  evidence.py  extractor.py  labels.py  orchestrator.py  project.py  qa.py  reporter.py  run_view.py  trace.py  user.py
backend/schemas/industry/: __init__.py  _maturity.py  collab_saas.py  crm_saas.py  cross_border.py  edu_saas.py
backend/storage/: README.md  __init__.py  checkpoint_types.py  langgraph_adapter.py  memory.py  postgres.py  protocols.py  redis_bus.py  serde.py  sql.py
backend/storage/tests/: conftest.py  test_memory.py  test_postgres_e2e.py  test_redis_e2e.py  test_serde.py
backend/tools/: README.md  __init__.py  injection_guard.py  sanitizer.py
backend/tools/tests/: test_injection_guard.py  test_sanitizer.py
deploy/: Caddyfile
docs/: AGENTS.md  ARCHITECTURE.md  COMPLIANCE.md  CONVENTIONS.md  DAG.md  DEPLOY.md  DEPLOY_PROD.md  E2E_INTEGRATION_LOG.md  EVIDENCE.md  HALLUCINATION_CONTROL.md  INNOVATIONS.md  METRICS.md  OBSERVABILITY.md  PROJECT_SUBMISSION.md  QA.md  README.md  SCHEMA.md  STORAGE.md  WORKBREAKDOWN.md
docs/engineering-notes/: 2026-06-06-langgraph-native-orchestration-design.md  2026-06-06-langgraph-native-orchestration-plan.md  2026-06-07-phase2-native-default-runstateview.md  2026-06-07-workflow-stepper-redesign-design.md  README.md
fixtures/: __init__.py  build_mock_data.py
fixtures/mock_data/: README.md
fixtures/mock_data/agent_outputs/: analyst__full.json  collector__notion.json  extractor__notion.json  qa__needs_revision.json  qa__pass.json  reporter__v1.json
fixtures/mock_data/analysis_results/: analysis_full.json  feature_comparison.json  pricing_comparison.json  swot.json
fixtures/mock_data/competitor_profiles/: asana.json  clickup.json  notion.json
fixtures/mock_data/evidences/: evidence_db.jsonl
fixtures/mock_data/projects/: collab_saas_demo.json
fixtures/mock_data/qa_verdicts/: needs_revision.json  pass.json
fixtures/mock_data/report_drafts/: draft_v1.json
frontend/: .dockerignore  .env.local.example  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: agent-phases.ts  auth-context.tsx  dag-mock.ts  dag-phases.ts  evidence-context.tsx  evidence-index.ts  metrics-mock.ts  mock-run.ts  projects-mock.ts  report-export.ts  report-mock.ts  trace-mock.ts  workflow-model.ts  workspace-actions.ts  (+1 more)
scripts/: deploy.sh  localdb.py
(+144 files in other folders)
