[project]
name = "competitive-analysis-agent-platform"
version = "0.1.0"
description = "AI 驱动的 B 端 SaaS 竞品分析 Agent 协作平台"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # 核心
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",

    # Agent 编排
    "langgraph>=0.2",
    "langchain-core>=0.3",

    # LLM Provider
    "anthropic>=0.39",
    # openai / deepseek 通过 OpenAI 兼容接口共用 openai SDK
    "openai>=1.40",

    # 存储
    "asyncpg>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "redis>=5.0",
    "chromadb>=0.5",

    # 工具
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "readability-lxml>=0.8.1",
    "lxml>=5.2",
    "tenacity>=8.3",
    "jinja2>=3.1",

    # 可观测
    "structlog>=24.1",
    "opentelemetry-api>=1.25",

    # 工具实用
    "python-ulid>=2.7",
    "tldextract>=5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipython>=8.25",
]
tools-search = [
    # Tavily / Serper / Firecrawl 通过 httpx 直接调用，无需额外依赖
    # Playwright 是可选的 fallback
    "playwright>=1.44",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]  # line too long handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false  # v1 阶段允许，v2 启用

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "e2e: end-to-end integration tests",
]
testpaths = ["backend/tests", "backend/agents", "backend/orchestrator"]
